Import of PERLER/MooseX-Attribute-Dependent-1.1.0 from CPAN.
gitpan-cpan-distribution: MooseX-Attribute-Dependent
gitpan-cpan-version:      1.1.0
gitpan-cpan-path:         PERLER/MooseX-Attribute-Dependent-1.1.0.tar.gz
gitpan-cpan-author:       PERLER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.1.0 - 2011-03-17
+  - Dependent attribute can now be defined in roles
+    and applied to roles or classes
+
 1.0.1 - 2011-03-08
   - Moose 2.0 and 1.24 compatible (thanks doy)
 
