--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.1.1 - 2011-04-05
+  - fixed role composition (doy)
+  - fixed bogus prereqs
+
 1.1.0 - 2011-03-17
   - Dependent attribute can now be defined in roles
     and applied to roles or classes
