--- a/README.pod
+++ b/README.pod
@@ -19,7 +19,11 @@ Moose::Exporter->setup_import_methods(
         attribute => ['MooseX::Attribute::Dependent::Meta::Role::Attribute'],
     },
     role_metaroles => {
-        attribute => ['MooseX::Attribute::Dependent::Meta::Role::Attribute'],
+        (Moose->VERSION >= 1.9900
+            ? (applied_attribute =>
+                ['MooseX::Attribute::Dependent::Meta::Role::Attribute'])
+            : ()),
+        role => ['MooseX::Attribute::Dependent::Meta::Role::Role'],
         application_to_class => ['MooseX::Attribute::Dependent::Meta::Role::ApplicationToClass'],
         application_to_role => ['MooseX::Attribute::Dependent::Meta::Role::ApplicationToRole'],
         
