Import of PERLER/MooseX-Attribute-Dependent-1.1.2 from CPAN.
gitpan-cpan-distribution: MooseX-Attribute-Dependent
gitpan-cpan-version:      1.1.2
gitpan-cpan-path:         PERLER/MooseX-Attribute-Dependent-1.1.2.tar.gz
gitpan-cpan-author:       PERLER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.1.2 - 2011-09-17
+  - fixed bug where the dependency parameter would swallow all subsequent parameters
+
 1.1.1 - 2011-04-05
   - fixed role composition (doy)
   - fixed bogus prereqs
